--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body {
     color: #22af29;
 }
 
+.mesparagraphes {
+    margin: 0px 5px 0px 20px;
+    
+}
+
 h1 {
     color: #1443dc;
     /* mettre de la couleur */
@@ -123,19 +128,22 @@ footer {
     padding: 10px;
     box-sizing: border-box;
     word-wrap: break-word;
-
-
 }
-
-#deuxièmepara {
-    color: #000000;
-
-}
-
-#troisiemeparagraphe
 
 p::first-letter {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 18px;
+}
+@media all and (max-width:500px) {
+
+    .mesparagraphes {
+        width: 100%;
+        overflow: scroll;
+        min-width: 100%;
+    }
+
+    #segondparagraphe {
+        
+    }
 }
